# django-helpsite

./: README.md  manage.py  pyproject.toml  requirements.txt
django-helpsite/: settings.py  urls.py  wsgi.py
django-helpsite/static/myfiles/: ant.js  ant1.css
pages/: admin.py  models.py  urls.py  views.py
templates/: base.html  left_menu.html  modals.html  top.html
templates/home/: index.html
templates/page/: index.html
