[tool.poetry]
name = "botifi-helpsite"
version = "0.1.0"
description = ""
authors = ["simus <sirojiddinmustafayev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
django-ckeditor = "^6.1.0"
django-mptt = "^0.12.0"
django-environ = "^0.4.5"
psycopg2 = "^2.9.1"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
